# dotfiles

./: .Xresources  .alacritty.yml  .bash_aliases  .bashrc  .gitconfig  .gitignore  .i3status.conf  .ideavimrc  .vimrc  .zsh_alias  .zshrc  arch-install  arch-server-install.md  devices  dunstrc  hdd  hp_lid  link  link.sh  paranoid_link  readynas-install.md  rotate-screen  urxvt-clipboard
.config/gajim/: config
.config/mpd/: mpd.conf  pause_on_start
.i3/: bar.py  config
.ssh/: config.tmpl
i3/: config
i3/bar/: Cargo.toml  a.out  foo.c
i3/bar/src/: backlight.rs  battery.rs  codec.rs  controller.rs  i3status.rs  icon.rs  main.rs  media.rs  my_io.rs  stdin.rs  stdout.rs  sysfs.rs  systeminfo.rs  time.rs  timer.rs
i3/bar/src/i3status/: codec.rs  mod.rs
mpd/: mpd.conf
neo2-awt-hack/: apply
paranoid/: mkinitcpio.conf
paranoid/hooks/: lukskey
paranoid/install/: lukskey
readynas-install/: dlna.md  email-notifications.md  mqtt.md  nginx-letsencrypt-webdav.md  pihole.md  poor-mans-git.md  readynas-install.md  remote-journal.md  smartd.md  switch-to-zfs-root.md  wireguard-vpn.md
setup/: alacritty  dunst  gajim  i3  mpd  reisub  vim  xorg  zsh
sysctl/: 99-sysctl.conf
util/: encrypt-mumble-cert  gittraversal.py  issues.py  plotly-fetch.py  router.sh  strip-jpg  table2image.py  twitchchat.py  update-bootstrap
util/huffman/: crackstation-human-only.json  darkc0de.json  huffman.py  mkdict.py  rockyou.json  sqlmap.json
xorg/: .XCompose  .XCompose-dead  .Xresources  .xinitrc  10-monitor.conf
